# parameter-golf-hy

./: .gitignore  README.md  down.sh  pyproject.toml  run.sh  runpod.template.sh  setup.sh  train_gpt.py
.github/workflows/: build-h100-image.yml
data/: cached_challenge_fineweb.py
docker/: h100-runtime.Dockerfile
records/track_10min_16mb/2026-03-25_ValCalib_GPTQ_XSA_BigramHash3072/: eval_train_free_checkpoint.py  run_h100.sh  run_train_free_proxy.sh  run_train_free_search.sh  setup_h100.sh  summarize_train_free_logs.py  train_gpt.py
results/train_free_proxy/: 2026-04-04_seed314_budget10_stage1_slot-coarse_docs32.tsv  2026-04-04_seed314_budget10_stage2_slot-coarse_docs64.tsv  2026-04-04_seed314_budget10_stage3_lr_refine_docs64.tsv  2026-04-04_seed314_budget10_stage4_docs128.tsv  2026-04-04_seed314_budget10_summary.md  2026-04-04_seed314_docs32.tsv
saved_runs/record_best_formal_seed314_20260404T085507Z/: README.txt  final_model.int6.ptz.sha256  final_model.pt.part-02  final_model.pt.sha256  record_best_formal_seed314_20260404T085507Z.txt
scripts/: build_h100_image.sh
