[project]
name = "parameter-golf-hy"
version = "0.1.0"
description = "Reproducible Parameter Golf baseline workflow for local and Runpod GPUs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets",
    "huggingface-hub",
    "kernels",
    "numpy>=1.26,<2",
    "sentencepiece",
    "setuptools",
    "tiktoken",
    "tqdm",
    "typing-extensions==4.15.0",
]

[project.optional-dependencies]
mlx = [
    "mlx",
]

[tool.uv]
package = false
